--- a/file_io/os2/Makefile.in
+++ b/file_io/os2/Makefile.in
@@ -9,7 +9,9 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
+OSDIR=$(INCDIR)/arch/@OSDIR@
+DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
+INCLUDES=-I$(INCDIR) -I$(OSDIR) -I$(DEFOSDIR)
 
 LIB=file.a
 
@@ -49,55 +51,77 @@ depend:
 	cp Makefile.in Makefile.in.bak \
 	    && sed -ne '1,/^# DO NOT REMOVE/p' Makefile.in > Makefile.new \
 	    && gcc -MM $(INCLUDES) $(CFLAGS) *.c | sed -e "s%\\\\\(.\)%/\\1%g" >> Makefile.new \
-	    && sed -e '1,$$s: $(INCDIR)/: $$(INCDIR)/:g' \
-	           -e '1,$$s: $(INCDIR1)/: $$(INCDIR1)/:g' \
-	           -e '1,$$s: $(OSDIR)/: $$(OSDIR)/:g' Makefile.new \
+	    && sed -e '1,$$s: $(OSDIR)/: $$(OSDIR)/:g' \
+                   -e '1,$$s: $(DEFOSDIR)/: $$(DEFOSDIR)/:g' \
+	           -e '1,$$s: $(INCDIR)/: $$(INCDIR)/:g' Makefile.new \
 		> Makefile.in \
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-dir.o: dir.c fileio.h $(INCDIR1)/apr_private.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_time.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_thread_proc.h
-fileacc.o: fileacc.c fileio.h $(INCDIR1)/apr_private.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_time.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_thread_proc.h
-filedup.o: filedup.c fileio.h $(INCDIR1)/apr_private.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_time.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_thread_proc.h
-filestat.o: filestat.c fileio.h $(INCDIR1)/apr_private.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_time.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_thread_proc.h
-maperrorcode.o: maperrorcode.c fileio.h $(INCDIR1)/apr_private.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_time.h ../../network_io/os2/os2calls.h
-open.o: open.c fileio.h $(INCDIR1)/apr_private.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_time.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_thread_proc.h $(INCDIR1)/apr_portable.h \
- $(INCDIR1)/apr_network_io.h $(INCDIR1)/apr_lock.h
-pipe.o: pipe.c fileio.h $(INCDIR1)/apr_private.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_time.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_thread_proc.h
-readwrite.o: readwrite.c fileio.h $(INCDIR1)/apr_private.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_time.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_thread_proc.h
-seek.o: seek.c fileio.h $(INCDIR1)/apr_private.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_time.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_thread_proc.h
+common.o: common.c ../unix/fileacc.c $(INCDIR)/apr_strings.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_tables.h $(OSDIR)/fileio.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_lock.h
+dir.o: dir.c $(OSDIR)/fileio.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_strings.h
+filedup.o: filedup.c $(OSDIR)/fileio.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_strings.h
+filestat.o: filestat.c $(OSDIR)/fileio.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h
+maperrorcode.o: maperrorcode.c $(OSDIR)/fileio.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ ../../network_io/os2/os2calls.h ../../network_io/os2/os2nerrno.h
+open.o: open.c $(OSDIR)/fileio.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
+ $(INCDIR)/apr_dso.h $(INCDIR)/apr_strings.h
+pipe.o: pipe.c $(OSDIR)/fileio.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_strings.h
+readwrite.o: readwrite.c $(OSDIR)/fileio.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h
+seek.o: seek.c $(OSDIR)/fileio.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
+ $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h
