--- a/file_io/unix/Makefile.in
+++ b/file_io/unix/Makefile.in
@@ -1,8 +1,3 @@
-#CFLAGS=$(OPTIM) $(CFLAGS1) $(EXTRA_CFLAGS)
-#LIBS=$(EXTRA_LIBS) $(LIBS1)
-#INCLUDES=$(INCLUDES1) $(INCLUDES0) $(EXTRA_INCLUDES)
-#LDFLAGS=$(LDFLAGS1) $(EXTRA_LDFLAGS)
-
 RM=@RM@
 CC=@CC@
 RANLIB=@RANLIB@
@@ -13,8 +8,7 @@ INCDIR=../../include
 OSDIR=$(INCDIR)/arch/@OSDIR@
 DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
 INCLUDES=-I$(INCDIR) -I$(OSDIR) -I$(DEFOSDIR)
-
-#LIB=libfile.a
+MKDEP=../../helpers/mkdep.sh
 
 OBJS=dir.o \
 	fileacc.o \
@@ -37,65 +31,7 @@ clean:
 distclean: clean
 	-$(RM) -f Makefile
 
-
-#$(LIB): $(OBJS)
-#	$(RM) -f $@
-#	$(AR) cr $@ $(OBJS)
-#	$(RANLIB) $@
-
-#
-# We really don't expect end users to use this rule.  It works only with
-# gcc, and rebuilds Makefile.in.  You have to re-run configure after
-# using it.
-#
 depend:
-	cp Makefile.in Makefile.in.bak \
-	    && sed -ne '1,/^# DO NOT REMOVE/p' Makefile.in > Makefile.new \
-	    && gcc -MM $(INCLUDES) $(CFLAGS) *.c >> Makefile.new \
-	    && sed -e '1,$$s: $(INCDIR)/: $$(INCDIR)/:g' \
-	           -e '1,$$s: $(OSDIR)/: $$(OSDIR)/:g' Makefile.new \
-		> Makefile.in \
-	    && rm Makefile.new
+	$(MKDEP) $(INCLUDES) $(CFLAGS) *.c
 
 # DO NOT REMOVE
-dir.o: dir.c $(INCDIR)/apr_strings.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h
-fileacc.o: fileacc.c $(INCDIR)/apr_strings.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_tables.h
-filedup.o: filedup.c $(INCDIR)/apr_strings.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h
-filestat.o: filestat.c $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h
-fullrw.o: fullrw.c $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h
-open.o: open.c $(INCDIR)/apr_strings.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h
-pipe.o: pipe.c $(INCDIR)/apr_strings.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_tables.h
-readwrite.o: readwrite.c $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h
-seek.o: seek.c
