--- a/i18n/unix/Makefile.in
+++ b/i18n/unix/Makefile.in
@@ -1,4 +1,3 @@
-
 RM=@RM@
 CC=@CC@
 RANLIB=@RANLIB@
@@ -7,6 +6,7 @@ LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
 INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
+MKDEP=../../helpers/mkdep.sh
 
 OBJS=xlate.o
 
@@ -21,29 +21,7 @@ clean:
 distclean: clean
 	-$(RM) -f Makefile
 
-
-#
-# We really don't expect end users to use this rule.  It works only with
-# gcc, and rebuilds Makefile.in.  You have to re-run configure after
-# using it.
-#
 depend:
-	cp Makefile.in Makefile.in.bak \
-	    && sed -ne '1,/^# DO NOT REMOVE/p' Makefile.in > Makefile.new \
-	    && gcc -MM $(INCLUDES) $(CFLAGS) *.c >> Makefile.new \
-	    && sed -e '1,$$s: $(INCDIR)/: $$(INCDIR)/:g' \
-	           -e '1,$$s: $(OSDIR)/: $$(OSDIR)/:g' Makefile.new \
-		> Makefile.in \
-	    && rm Makefile.new
+	$(MKDEP) $(INCLUDES) $(CFLAGS) *.c
 
 # DO NOT REMOVE
-utf8_ucs2.o: utf8_ucs2.c $(INCDIR)/arch/unix/i18n.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_xlate.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_time.h
-xlate.o: xlate.c $(INCDIR)/apr_private.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/apr_time.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_strings.h $(INCDIR)/apr_xlate.h
