Add apr_inet_ntop(), apr_inet_pton(), apr_create_socket(), and fix apr_get_ipaddr() to be thread-safe and to support IPv6.
apr_create_socket() supports the special AF_UNSPEC family which
means get AF_INET6 if you can but fall back to AF_INET because the
app doesn't really care.

The inclusion of apr_inet_ntop() and apr_inet_pton() still needs to
be rolled into Win32, OS/2, and BeOS networkio.h and build scripts.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60741 13f79535-47bb-0310-9956-ffa450edef68

--- a/network_io/unix/Makefile.in
+++ b/network_io/unix/Makefile.in
@@ -16,7 +16,9 @@ OBJS=poll.o \
 	sendrecv.o \
 	sockets.o \
 	sockopt.o \
-	sockaddr.o
+	sockaddr.o \
+	inet_ntop.o \
+	inet_pton.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
