This changes BeOS to use the majority of the Unix socket code.
Once this has been in a day or 2 I'll remove the old files.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60761 13f79535-47bb-0310-9956-ffa450edef68

--- a/network_io/beos/Makefile.in
+++ b/network_io/beos/Makefile.in
@@ -3,18 +3,17 @@ RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
-INCDIR=../../include -I../../file_io/unix
-INCLUDES=-I$(INCDIR) -I.
+INCDIR=../../include
+OSDIR=$(INCDIR)/arch/@OSDIR@
+DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
+INCLUDES=-I$(INCDIR) -I$(OSDIR) -I$(DEFOSDIR)
 MKDEP=../../helpers/mkdep.sh
 
 LIB=libnetwork.a
 
 OBJS=poll.o \
 	sendrecv.o \
-	sockets.o \
-	sockopt.o \
-        inet_aton.o \
-        sockaddr.o
+	socketcommon.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
