--- a/configure.in
+++ b/configure.in
@@ -272,6 +272,7 @@ AC_CHECK_HEADERS(pwd.h)
 AC_CHECK_HEADERS(sys/sem.h)
 AC_CHECK_HEADERS(signal.h, signalh="1", signalh="0")
 AC_CHECK_HEADERS(stdarg.h, stdargh="1", stdargh="0")
+AC_CHECK_HEADERS(stddef.h)
 AC_CHECK_HEADERS(stdio.h, stdioh="1", stdioh"0")
 AC_CHECK_HEADERS(stdlib.h)
 AC_CHECK_HEADERS(string.h)
