Tweak the APR_OFF_T_FMT logic so that we get the right value on Solaris Sparc too.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60814 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -418,7 +418,7 @@ fi
 # don't get it right for your platform, you can override our decision
 # below.
 case "$OS" in
-   *linux* | *os2_emx | *-pc-solaris*)
+   *linux* | *os2_emx | *-solaris*)
        off_t_fmt='#define APR_OFF_T_FMT "ld"'
 esac
 
