Check if h_errno is declared in netdb.h and whether any flags are required to make it visible. For instance, HP-UX 10.20 requires _XOPEN_SOURCE_EXTENDED.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60818 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -265,7 +265,7 @@ AC_CHECK_HEADERS(io.h)
 AC_CHECK_HEADERS(limits.h)
 AC_CHECK_HEADERS(malloc.h)
 AC_CHECK_HEADERS(memory.h)
-AC_CHECK_HEADERS(netdb.h)
+AC_CHECK_HEADERS(netdb.h, netdbh="1", netdbh="0")
 AC_CHECK_HEADERS(osreldate.h)
 AC_CHECK_HEADERS(process.h)
 AC_CHECK_HEADERS(pwd.h)
@@ -323,6 +323,14 @@ AC_SUBST(sys_uioh)
 AC_SUBST(signalh)
 AC_SUBST(sys_waith)
 AC_SUBST(pthreadh)
+
+dnl #----------------------------- Checking for h_errno in <netdb.h>
+if test "$netdbh" = "1"; then
+  APR_CHECK_H_ERRNO_FLAG
+  if test "$ac_cv_h_errno_cflags" = "no"; then
+    AC_MSG_ERROR([can not find h_errno in netdb.h])
+  fi
+fi
 
 dnl #----------------------------- Checks for standard typedefs
 AC_TYPE_OFF_T
