--- a/Makefile.in
+++ b/Makefile.in
@@ -100,6 +100,9 @@ subdirs_distclean:
 
 install: all
 
+exports:
+	./helpers/make_export.pl -o ./apr.exports include/*.h
+
 docs:
 	./helpers/scandoc -i./helpers/default.pl -p./docs/ ./include/*.h
 	
