Add a CHANGES log and make sure that apr.exports is removed when make distclean is used.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60828 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -59,7 +59,7 @@ depend: subdirs_depend
 distclean: subdirs_distclean
 	-$(RM) -f include/apr.h include/apr_private.h include/apr_private.h.in
 	-$(RM) -f *.o *.a *.so
-	-$(RM) -f config.cache config.status config.log configure
+	-$(RM) -f config.cache config.status config.log configure apr.exports
 	-$(RM) -f Makefile
 	-$(RM) -f APRVARS
 	-$(RM) -rf objs
