When running make_export.pl from the build scripts, invoke the perl interpreter explicitly so that the path coded in make_export.pl doesn't have to be correct.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60834 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -101,7 +101,7 @@ subdirs_distclean:
 install: all
 
 exports:
-	./helpers/make_export.pl -o ./apr.exports include/*.h
+	perl ./helpers/make_export.pl -o ./apr.exports include/*.h
 
 docs:
 	./helpers/scandoc -i./helpers/default.pl -p./docs/ ./include/*.h
