--- a/threadproc/beos/Makefile.in
+++ b/threadproc/beos/Makefile.in
@@ -6,7 +6,7 @@ LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
 OSDIR=$(INCDIR)/arch/@OSDIR@
 DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
-INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch $(OSDIR) $(DEFOSDIR)
+INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch -I$(OSDIR) -I$(DEFOSDIR)
 MKDEP=../../helpers/mkdep.sh
 
 LIB=libthreadproc.a
