The test programs themselves should always be built with debug mode on. This way if a test fails, we can debug the test program, even if we can't dig into the actual APR code.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60855 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -1,7 +1,7 @@
 RM=@RM@
 CC=@CC@
 RANLIB=@RANLIB@
-CFLAGS=@CFLAGS@ @OPTIM@
+CFLAGS=-g @CFLAGS@ @OPTIM@
 LIBS=../libapr.a @LIBS@ 
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../include
