Add the sendfile test to the testsock program.  This allows make test to get all the way through the test suite and report if everything is successful or not.  In order to do this, I had to rename the testsf.c file to sendfile.c.  We can't name the program testsf, because the find script would find it, and then we don't get through the test suite.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60868 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -13,7 +13,6 @@ TARGETS= testmd5@EXEEXT@ \
 	testflock@EXEEXT@ \
 	testproc@EXEEXT@ \
 	testsock@EXEEXT@ \
-	testsf@EXEEXT@ \
 	testthread@EXEEXT@ \
 	testtime@EXEEXT@ \
 	testargs@EXEEXT@ \
@@ -32,7 +31,6 @@ OBJS= testmd5.o \
 	testflock.o \
 	testproc.o \
 	testsock.o \
-	testsf.o \
 	testthread.o \
 	testtime.o \
         testargs.o \
@@ -82,13 +80,11 @@ testproc@EXEEXT@: testproc.o
 testthread@EXEEXT@: testthread.o
 	$(CC) $(CFLAGS) -o testthread@EXEEXT@ testthread.o $(LDFLAGS)
 
-testsock@EXEEXT@: testsock.o client.o server.o 
+testsock@EXEEXT@: testsock.o client.o server.o sendfile.o
 	$(CC) $(CFLAGS) -o testsock@EXEEXT@ testsock.o $(LDFLAGS)
 	$(CC) $(CFLAGS) -o server@EXEEXT@ server.o $(LDFLAGS) 
 	$(CC) $(CFLAGS) -o client@EXEEXT@ client.o $(LDFLAGS)
-
-testsf@EXEEXT@: testsf.o
-	$(CC) $(CFLAGS) -o testsf@EXEEXT@ testsf.o $(LDFLAGS)
+	$(CC) $(CFLAGS) -o sendfile@EXEEXT@ sendfile.o $(LDFLAGS)
 
 testtime@EXEEXT@: testtime.o
 	$(CC) $(CFLAGS) -o testtime@EXEEXT@ testtime.o $(LDFLAGS)
