A brand new (and -greatly- simplified) test build environment for Win32
  nmake /f aprtest.win  will build the project, it's wrapped by the studio
  workspace aprtest.dsw for the IDE folks.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60886 13f79535-47bb-0310-9956-ffa450edef68

--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -8,8 +8,7 @@ INCDIR=../include
 INCLUDES=-I$(INCDIR)
 MKDEP=../helpers/mkdep.sh
 
-TARGETS= testmd5@EXEEXT@ \
-	testfile@EXEEXT@ \
+TARGETS= testfile@EXEEXT@ \
 	testflock@EXEEXT@ \
 	testproc@EXEEXT@ \
 	testsock@EXEEXT@ \
@@ -26,8 +25,7 @@ TARGETS= testmd5@EXEEXT@ \
 	occhild@EXEEXT@ \
 	mod_test.so
 
-OBJS= testmd5.o \
-	testfile.o \
+OBJS= testfile.o \
 	testflock.o \
 	testproc.o \
 	testsock.o \
@@ -46,9 +44,6 @@ OBJS= testmd5.o \
 	$(CC) -c $(CFLAGS) $(INCLUDES) $<
 
 all: $(TARGETS) 
-
-testmd5@EXEEXT@: testmd5.o
-	$(CC) $(CFLAGS) -o testmd5@EXEEXT@ testmd5.o $(LDFLAGS)
 
 testfile@EXEEXT@: testfile.o
 	$(CC) $(CFLAGS) -o testfile@EXEEXT@ testfile.o $(LDFLAGS) 
