Win32 apr.hw back in line with apr.h.in, and reordered for consistency   between these files.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60888 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -285,7 +285,7 @@ AC_CHECK_HEADERS(sys/time.h)
 AC_CHECK_HEADERS(tpfeq.h)
 AC_CHECK_HEADERS(tpfio.h)
 AC_CHECK_HEADERS(sys/uio.h, sys_uioh="1", sys_uioh="0")
-AC_CHECK_HEADERS(unistd.h)
+AC_CHECK_HEADERS(unistd.h, unistdh="1", unistdh="0")
 AC_CHECK_HEADERS(poll.h)
 AC_CHECK_HEADERS(sys/poll.h)
 AC_CHECK_HEADERS(unix.h)
