--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -25,8 +25,8 @@
 #endif
 
 #define APR_HAVE_CTYPE_H        @ctypeh@
-#define APR_HAVE_ERRNO_H        @errnoh@
 #define APR_HAVE_DIRENT_H       @direnth@
+#define APR_HAVE_ERRNO_H        @errnoh@
 #define APR_HAVE_FCNTL_H        @fcntlh@
 #define APR_HAVE_NETINET_IN_H   @netinet_inh@
 #define APR_HAVE_PTHREAD_H      @pthreadh@
@@ -37,6 +37,7 @@
 #define APR_HAVE_SYS_UIO_H      @sys_uioh@
 #define APR_HAVE_SIGNAL_H       @signalh@
 #define APR_HAVE_SYS_WAIT_H     @sys_waith@
+#define APR_HAVE_UNISTD_H       @unistdh@
 
 #define APR_USE_FLOCK_SERIALIZE           @flockser@ 
 #define APR_USE_SYSVSEM_SERIALIZE         @sysvser@
@@ -216,9 +217,6 @@ Sigfunc *apr_signal(int signo, Sigfunc * func);
 #ifdef WEXITSTATUS
 #define apr_wait_t       int
 #else
-/* We don't have a POSIX wait interface. Assume we have the old-style. Is this
- * a bad assumption? */
-/* Yessiree bob, it was... but will this work instead? */
 #define apr_wait_t       union wait
 #define WEXITSTATUS(status)    (int)((status).w_retcode)
 #define WTERMSIG(status)       (int)((status).w_termsig)
