Is it my imagination, or was this badness?
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60889 13f79535-47bb-0310-9956-ffa450edef68

--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -209,7 +209,7 @@ Sigfunc *apr_signal(int signo, Sigfunc * func);
 #define apr_signal(a,b) signal(a,b)
 #endif
 
-#ifdef APR_HAVE_SYS_WAIT_H
+#if APR_HAVE_SYS_WAIT_H
 
 /* We have a POSIX wait interface */
 #include <sys/wait.h>
